--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,19 @@
   "description": "Speed dial for the internet.",
   "version": "1.0",
 
+  "omnibox": {"keyword":"ql"},
+
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
   "permissions": [
     "activeTab",
-    "storage"
+    "storage",
+    "tabs"
   ]
 }
