--- a/manifest.json
+++ b/manifest.json
@@ -7,8 +7,13 @@
 
   "omnibox": {"keyword":"ql"},
 
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
+
   "browser_action": {
-    "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
   "background": {
